--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "author": "Max Jöhnk <maxjoehnk@gmail.com>",
     "license": "GPL-3.0",
     "scripts": {
-        "prepublish": "tsc"
+        "prepublish": "tsc",
+        "docs": "typedoc src/index.ts"
     },
     "devDependencies": {
-        "@types/node": "^10.3.1",
-        "typescript": "^2.9.1"
+        "@types/node": "^14.18.29",
+        "typedoc": "^0.23.15",
+        "typescript": "^4.8.3"
     }
 }
