--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v3.4.1
         with:
-          node-version: >14
+          node-version: 14
           cache: yarn
           cache-dependency-path: yarn.lock
       - name: Build Docs
